Edited wiki page through web user interface.

--- a/wiki/FlickrMosaic.wiki
+++ b/wiki/FlickrMosaic.wiki
@@ -13,3 +13,7 @@ Thanks to Flash 10 features we can do all this operations including result mosai
 = How to =
 
 *[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/FlickrMosaic Complete project code available in my repository]*
+
+= Change Log =
+  * 2009.02.4 - *v1.0*
+    * Initial release
