--- a/wiki/FlickrMosaic.wiki
+++ b/wiki/FlickrMosaic.wiki
@@ -2,8 +2,13 @@
 #labels Featured
 
 = Flickr™ Mosaic =
-
+<table>
+<tr><td>
 [http://www.flickr.com/photos/_inspirit/3048111248/ http://farm4.static.flickr.com/3052/3048111248_d0edf21916_m.jpg]
+</td><td>
+[http://www.flickr.com/photos/_inspirit/3048110392/ http://farm4.static.flickr.com/3065/3048110392_841f1e6892.jpg]
+</td></tr>
+</table>
 
 Choose an image from your hard drive or capture from webcam, then select Flickr™ options for tiling and see how it is building your mosaic using photos from Flickr™ service.
 Thanks to Flash 10 features we can do all this operations including result mosaic save without any server-side stuff.
