--- a/wiki/FluidSolver.wiki
+++ b/wiki/FluidSolver.wiki
@@ -3,6 +3,14 @@
 
 = Fluid Solver Class =
 
+<table>
+<tr><td>
+[http://farm4.static.flickr.com/3410/3516964725_897a34676c_m.jpg]
+</td><td>
+[http://farm4.static.flickr.com/3627/3516964839_5c16e1c015_m.jpg]
+</td></tr>
+</table>
+
 This is a class for solving real-time fluid dynamics simulations based on Navier-Stokes equations and code from Jos Stam's paper [http://www.dgp.toronto.edu/people/stam/reality/Research/pdf/GDC03.pdf "Real-Time Fluid Dynamics for Games"]
 
 Original implementation in C++ done by [http://www.memo.tv Memo Akten]
