Edited wiki page through web user interface.

--- a/wiki/CannyEdgeDetector.wiki
+++ b/wiki/CannyEdgeDetector.wiki
@@ -7,7 +7,9 @@
 
 [http://en.wikipedia.org/wiki/Canny_edge_detector The Canny edge detection operator was developed by John F. Canny in 1986 and uses a multi-stage algorithm to detect a wide range of edges in images.]
 
-*[http://blog.inspirit.ru/?p=297 Test demonstration application]*
+*[http://blog.inspirit.ru/?p=297 Test demonstration application (pure AS3 version)]*
 
 == How To ==
 *[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetector Complete source code and test usage example available in my repository]*
+
+*[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetectorAlchemy Alchemy version source code and test usage example available here]*
