Edited wiki page through web user interface.

--- a/wiki/FluidSolver.wiki
+++ b/wiki/FluidSolver.wiki
@@ -11,6 +11,8 @@ Original implementation in C++ done by [http://www.memo.tv Memo Akten]
 
 *[http://blog.inspirit.ru/?p=248 Test demonstration application]*
 
+*[http://blog.inspirit.ru/?p=339 Alchemy version demonstration application]*
+
 == How To ==
 *[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/FluidSolver Complete source code and test usage example available in my repository]*
 
