Edited wiki page through web user interface.

--- a/wiki/FlashSurf.wiki
+++ b/wiki/FlashSurf.wiki
@@ -8,7 +8,7 @@
 
 SURF (Speeded Up Robust Features) is a robust image descriptor, first presented by Herbert Bay et al. in 2006, that can be used in computer vision tasks like object recognition or 3D reconstruction. SURF is based on sums of 2D Haar wavelet responses and makes an efficient use of integral images. As basic image features it uses a Haar wavelet approximation of the determinant of Hessian blob detector.
 
-I've used lot of resources for this lib such as OpenCV, OpenSURF, libmv SURF, Dlib and JavaSurf.
+I've used lot of resources for this lib such as OpenCV, OpenSURF, libmv SURF, Dlib and JavaSurf
 
 *[http://blog.inspirit.ru/?p=343 Some results and description]*
 
