--- a/wiki/FlashSurf.wiki
+++ b/wiki/FlashSurf.wiki
@@ -14,8 +14,8 @@ I've used lot of resources for this lib such as OpenCV, OpenSURF, libmv SURF, Dl
 == Change Log ==
 
 ===2010.02.19===
-  * separate projects/folder structure. Now FlashSURF - is only for SWC Lib related stuff, while FlashSURF.Examples is all about example-usage development
-  * all build operations rewritten as Ant tasks. (please see build.xml to config your FLEX SDK paths)
+  * separate projects/folder structure. Now *FlashSURF* - is only for SWC Lib related stuff, while *FlashSURF.Examples* is all about example-usage development
+  * all build operations rewritten as *Ant* tasks. (please see build.xml to config your FLEX SDK paths)
 ----
 ===2010.02.17===
   * added missing documentation to all methods
