Edited wiki page through web user interface.

--- a/wiki/ASSURF.wiki
+++ b/wiki/ASSURF.wiki
@@ -13,6 +13,9 @@ I've used lot of resources for this lib such as OpenCV, OpenSURF, libmv SURF, Dl
 
 == Change Log ==
 
+===2010.02.25===
+  * Project name changed because of policy reasons. All content moved to new folders: *ASSURF* and *ASSURF.Examples*
+----
 ===2010.02.23===
   * added *CameraRegionOfInterest* example and Lib functionality - fast change to be processed image area at runtime
 ----
