--- a/wiki/ASSURF.wiki
+++ b/wiki/ASSURF.wiki
@@ -9,8 +9,8 @@ SURF (Speeded Up Robust Features) is a robust image descriptor, first presented 
 
 I've used lot of resources for this lib such as OpenCV, OpenSURF, libmv SURF, Dlib and JavaSurf...
 
-*[http://blog.inspirit.ru/?p=401 FlashSURF -> ASSURF]*
-*[http://blog.inspirit.ru/?p=386 FlashSURF – moving further]*
+*[http://blog.inspirit.ru/?p=401 FlashSURF -> ASSURF]*<br>
+*[http://blog.inspirit.ru/?p=386 FlashSURF – moving further]*<br>
 *[http://blog.inspirit.ru/?p=343 FlashSURF Lib initial release]*
 
 == Change Log ==
