--- a/wiki/ASSURF.wiki
+++ b/wiki/ASSURF.wiki
@@ -9,46 +9,22 @@ SURF (Speeded Up Robust Features) is a robust image descriptor, first presented 
 
 I've used lot of resources for this lib such as OpenCV, OpenSURF, libmv SURF, Dlib and JavaSurf...
 
+=== Related blog posts ===
+
 *[http://blog.inspirit.ru/?p=401 FlashSURF -> ASSURF]*<br>
 *[http://blog.inspirit.ru/?p=386 FlashSURF – moving further]*<br>
 *[http://blog.inspirit.ru/?p=343 FlashSURF Lib initial release]*
 
-== Change Log ==
+=== ASSURF screen-casts ===
 
-===2010.02.25===
-  * Project name changed because of policy reasons. All content moved to new folders: *ASSURF* and *ASSURF.Examples*
-----
-===2010.02.23===
-  * added *CameraRegionOfInterest* example and Lib functionality - fast change to be processed image area at runtime
-----
-===2010.02.21===
-  * adding some notes to experiments
-  * added *CameraMatchMultipleReferences* example
-  * updated *Match with Homography* example (added average homography class to smooth visual representation)
-  * added *Dynamic Matches with save and load references* example
-  * added *MatchList* class - kinda Matches manager with ability to add references on fly and to save/load references as local file with all points data and track image
-----
-===2010.02.19===
-  * separate projects/folder structure. Now *FlashSURF* - is only for SWC Lib related stuff, while *FlashSURF.Examples* is all about example-usage development
-  * all build operations rewritten as *Ant* tasks. (please see build.xml to config your FLEX SDK paths)
-----
-===2010.02.17===
-  * added missing documentation to all methods
-  * added *IPointMatch* class
-  * added *readCurrentInterestPointsToByteArray* method to quickly read all current points data to provided *ByteArray* object
-  * added *writePointsDataToReference* method to write provided Interest points data into Alchemy memory as reference data
-  * renamed *getMatchesTo* to *getMatchesToPointsData* to clear the meaning. now it returns *IPointMatch* Vector.
-----
-===2010.02.16===
-  * *ImageProcessor* class added to customize input image process before detection
-  * *calculateInterestPoints* method for quick Interest points calculation inside Alchemy memory without output
-  * *getInterestPointsRegionByteArray* method to write fitted in *Rectangle* Interest points data into specified *ByteArray* object
-  * *getInterestPointsByteArray* method for quick calculate Interest points data and write it into specified *ByteArray* object
-  * *getMatchesTo* method returns number of matched points between calculated in Alchemy memory data and provided data in *ByteArray* object
+*[http://vimeo.com/album/186818 Vimeo album]*
 
-----
+=== Change Log ===
 
-== SOURCE ==
+Please see [http://code.google.com/p/in-spirit/updates/list SVN Timeline] for all changes information
+
+=== SOURCE ===
+
 *[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/ASSURF ASSURF SWC Lib source code]*
 
-*[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/ASSURF.Examples Test usage examples]*
+*[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/ASSURF.Examples ASSURF usage examples]*
