--- a/wiki/CannyEdgeDetector.wiki
+++ b/wiki/CannyEdgeDetector.wiki
@@ -12,6 +12,8 @@
 *[http://blog.inspirit.ru/?p=336 Small explanation of Alchemy version]*
 
 == How To ==
+*[http://in-spirit.googlecode.com/files/CannyEdgeDetector.zip Compiled SWC Lib]*
+
 *[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetector Complete source code and test usage example available in my repository]*
 
 *[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetectorAlchemy Alchemy version source code and test usage example available here]*
