--- a/wiki/CannyEdgeDetector.wiki
+++ b/wiki/CannyEdgeDetector.wiki
@@ -11,9 +11,33 @@
 
 *[http://blog.inspirit.ru/?p=336 Small explanation of Alchemy version]*
 
-== How To ==
+=== Usage info ===
+
+{{{
+// init Canny Detector instance
+// i would recommend pre-init instance outside loops for better performance
+// you can change source Image at anytime using "source" property
+
+var canny:CannyEdgeDetector = new CannyEdgeDetector(sourceImage);
+
+// run Edges detection
+// please note that source image should be GrayScaled before you run
+// detection process. (only BLUE channel data is used)
+// Edges would be outputted into provided edgesImage BitmapData object
+
+// you also can control different detection options (via properties):
+// blurSize - if you want source to be blurred before detection
+// lowThreshold - min edges threshold value to be processed
+// highThreshold - max edges threshold value to be processed
+
+canny.detectEdges(edgesImage);
+
+// always clear instance memory usage if you don't plan to use it any more
+
+canny.dispose();
+}}}
+
+=== Download ===
 *[http://in-spirit.googlecode.com/files/CannyEdgeDetector.zip Compiled SWC Lib]*
 
-*[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetector Complete source code and test usage example available in my repository]*
-
-*[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetectorAlchemy Alchemy version source code and test usage example available here]*
+*[http://code.google.com/p/in-spirit/source/browse/#svn/trunk/projects/CannyEdgeDetector Complete source code available in my repository]*
